--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <hr>
 
         <div class="creator">
-          <img src="/images/image-avatar.png" width="50px" alt="image-avatar">
-          <p>Creation of Jules Wyvern</p>
+          <img src="/images/image-avatar.png" width="40px" alt="image-avatar">
+          <p>Creation of <span>Jules Wyvern</span></p>
         </div>
 
         
